                   ----------------------------------------
                   | CHANGES of the numericalsgps package |
                   ----------------------------------------
1.0.1->1.1.0
- Added CanonicalBasisOfKernelCongruence
- Clarified the documentation relative to the various ways of defining numerical and affine semigroups
- Added some abbreviations to the names of some functions ("Gaps", Holes", "AperyList"...), especially at the documentation level
- External packages section in Affine Semigroups chapter was moved to its own chapter
- Added MinimalGenerators and Generators for affine semigroups
- Allowed a second argument in AperyList (an integer) and then AperyListOfNumericalSemigroupWRTElement or AperyListOfNumericalSemigroupWRTInteger is called depending on the membership of the integer to the semigroup
- NumericalSegrmioupByMinimalGenerators and NumericalSegrmioupByMinimalGeneratorsNC will be deprecated, and so are now undocumented
- New function MultiplicitySequenceOfNumericalSemigroup; also LipmanSemigroup is synonym of BlowUpOfNumericalSemigroup
- New function HolesOfNumericalSemigroup
- Added tools to deal with good semigroups in N^2 (membership, minimal good systems of generators, Arf closure, Arf test..) and good ideals
- Added KunzCoordinatesOfNumericalSemigroup and KunzPolytope
- New function NumericalDuplication
- New function InductiveSemigroup and MultipleOfNumericalSemigroup
- New function NumericalSemigroupByAffineMap
- New methods for computing the Frobenius number of a numerical semigroup and Apéry sets using Gröbner basis computations (thanks Ignacio Ojeda and Carlos Jesús Moreno Ávila); these rely on the package singular, 4ti2Interface and/or 4ti2gap
- New functions for counting Arf numerical semigroups
- Added SemigroupOfValuesOfPlaneCurve (depends on the package singular)