@@ -452,18 +452,20 @@ MRREVIEWER = {Attila Nagy},
 
 @article{AGS14,
 	author={Assi, A.  and  Garc\'{\i}a-S\'anchez, P. A.},
-	title={On curves with one place at infinity},
-	journal= "arXiv",
-	volume= "1407.0490",
-	year= "2014"
+	title={Algorithms for curves with one place at infinity},
+	journal= "Journal of Symbolic Computation",
+	volume= "74",
+  pages= "475--492",
+	year= "2016"
 }
 
 @article{AGSM14,
 	author={Assi, A.  and  Garc\'{\i}a-S\'anchez, P. A. and V. Micale},
 	title={Bases of subalgebras of K[[x]] and K[x]},
-	journal= "arXiv",
-	volume= "1412.4089",
-	year= "2014"
+	journal= "Journal of Symbolic Computation",
+	volume= "79",
+  pages= " 4--22",
+	year= "2017"
 }
 
 @book{Z86,
@@ -683,9 +685,10 @@ MRREVIEWER = {Lajos Hajdu},
 @article{GG-MF-VT,
 AUTHOR = {Garc\'{\i}a-Garc\'{\i}a, J. I. and Moreno-Fr\'{\i}as, M. A. and Vigneron-Tenorio, A.},
 TITLE = {Computation of Delta sets of numerical monoids},
-JOURNAL = {arxiv:1406.0280},
-YEAR ={2014},
-URL= {http://arxiv.org/abs/1406.0280},
+JOURNAL = {Monatsh. Math. },
+VOLUME = {178},
+PAGES={457--472},
+YEAR ={2015},
 }
 
 @misc{Normaliz,
@@ -841,22 +844,18 @@ adedModules/}
 @article{DGSRP15,
    author = {Delgado, M. and Garc{\'{\i}}a-S{\'a}nchez, P.~A. and Robles-P{\'e}rez, A.~M.},
     title = {Numerical semigroups with a given set of pseudo-Frobenius numbers},
-  journal = {ArXiv e-prints},
-archivePrefix = "arXiv",
-   eprint = {1505.08111},
- primaryClass = "math.AC",
+  journal = {LMS J. Comput. Math.},
  keywords = {Mathematics - Commutative Algebra, Mathematics - Combinatorics, 11D07, 20M14, 20-04},
-     year = 2015,
-    month = may,
-   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150508111D},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+     year = {2016},
+     volume= {19},
+     pages={186--205}
 }
 
-@article{GS,
-AUTHOR = {Garc\'{\i}a-S\'anchez, P. A.},
-TITLE = {A new approach for the computation of the tame degree},
+@article{GSONW,
+AUTHOR = {Garc\'{\i}a-S\'anchez, P. A. and O'Neill, C. and Webb, G.},
+TITLE = {On the computation of factorization invariants for affine semigroups},
 JOURNAL = {arxiv:1504.02998},
-YEAR ={2014},
+YEAR ={2017},
 URL= {http://arxiv.org/abs/1504.02998},
 }
 
