@@ -2,6 +2,8 @@
                    | CHANGES of the numericalsgps package |
                    ----------------------------------------
 1.0.1->1.1.0
+- Updated references
+- Added DeltaSetOfAffineSemigroup
 - Added CanonicalBasisOfKernelCongruence
 - Clarified the documentation relative to the various ways of defining numerical and affine semigroups
 - Added some abbreviations to the names of some functions ("Gaps", Holes", "AperyList"...), especially at the documentation level
